--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Welcome to my coursera test website! ⭐️</h1>
-<p>How was your day? 🎉</p>
+<p>Did you know that is is deployed from gh-pages branch and not from main? 🎉</p>
 </body>
 </html>
